force-app/main/default/objects/animalos__Job_Role__c/animalos__Job_Role__c.object-meta.xml
<CustomObject>
    <label>Job Role</label>
    <nameField>
        <displayFormat>JR{00000}</displayFormat>
        <label>Job Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>