force-app/main/default/objects/animalos__Job_Role__c/fields/animalos__Job__c.field-meta.xml
<CustomField>
    <fullName>animalos__Job__c</fullName>
    <label>Job</label>
    <referenceTo>animalos__Job__c</referenceTo>
    <relationshipLabel>Job Roles</relationshipLabel>
    <relationshipName>Job_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>