force-app/main/default/objects/animalos__Job_Role__c/fields/animalos__Role__c.field-meta.xml
<CustomField>
    <fullName>animalos__Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Officer</fullName>
            </value>
            <value>
                <fullName>Intake Officer</fullName>
            </value>
            <value>
                <fullName>Case Worker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>