force-app/main/default/objects/animalos__Job_Role__c/fields/animalos__User__c.field-meta.xml
<CustomField>
    <fullName>animalos__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>